--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <main>
         <section id="container">
             <article class="cartao">
-                
+                <div class="cartao__conteudo">
+                    <h3>PRORAMAÇÃO</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        
+                    </div>
+                </div>
             </article>
         </section>
     </main>
